More Legacy Survey fixes

--- a/dmu1/dmu1_ml_ELAIS-N1/1.10_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/1.10_LegacySurvey.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bootes master catalogue\n",
+    "# ELAIS-N1 master catalogue\n",
     "## Preparation of Legacy Survey data\n",
     "\n",
     "The catalogue comes from `dmu0_LegacySurvey`.\n",
@@ -36,7 +36,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -167,8 +169,8 @@
     "    magnitudes[band], magnitude_errors[band] = flux_to_mag_vect(flux[band] * 3.631e-6 ,flux_errors[band] * 3.631e-6)\n",
     "    \n",
     "    stellarities[band] = np.full(len(orig_legacy),0., dtype='float32')\n",
-    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF\" ] = 1.\n",
-    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF \" ] = 1.\n",
+    "    stellarities[band][orig_legacy[\"type\"] == \"PSF\" ] = 1.\n",
+    "    stellarities[band][ orig_legacy[\"type\"] == \"PSF \" ] = 1.\n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
@@ -241,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use magnitudes between 17.0 and 18.5"
+    "We will use magnitudes between 15.0 and 17.0"
    ]
   },
   {
@@ -332,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use magnitudes between 17.0 and 18.5."
+    "We use magnitudes between 15.0 and 17.0."
    ]
   },
   {
@@ -445,7 +447,7 @@
    "source": [
     "# Aperture correction\n",
     "mag_corr['z'], num, std = aperture_correction(\n",
-    "    magnitudes['z'][4], magnitudes['z'][5], \n",
+    "    magnitudes['z'][4], magnitudes['z'][4], \n",
     "    stellarities['z'],\n",
     "    mag_min=14.0, mag_max=17.0)\n",
     "print(\"Aperture correction for z band:\")\n",
