--- a/dmu1/dmu1_ml_NGP/1.4_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_NGP/1.4_LegacySurvey.ipynb
@@ -171,8 +171,8 @@
     "    magnitudes[band], magnitude_errors[band] = flux_to_mag_vect(flux[band] * 3.631e-6 ,flux_errors[band] * 3.631e-6)\n",
     "    \n",
     "    stellarities[band] = np.full(len(orig_legacy),0., dtype='float32')\n",
-    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF\" ] = 1.\n",
-    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF \" ] = 1. \n",
+    "    stellarities[band][orig_legacy[\"type\"] == \"PSF\" ] = 1.\n",
+    "    stellarities[band][ orig_legacy[\"type\"] == \"PSF \" ] = 1. \n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use magnitudes between 17.0 and 18.5"
+    "We will use magnitudes between 15.5 and 18.0"
    ]
   },
   {
@@ -269,7 +269,7 @@
     "mag_corr['g'], num, std = aperture_correction(\n",
     "    magnitudes['g'][4], magnitudes['g'][5], \n",
     "    stellarities['g'],\n",
-    "    mag_min=17.0, mag_max=18.5)\n",
+    "    mag_min=15.5, mag_max=18.0)\n",
     "print(\"Aperture correction for g band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['g']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use magnitudes between 17.0 and 18.5."
+    "We use magnitudes between 15.0 and 17.0."
    ]
   },
   {
@@ -360,7 +360,7 @@
     "mag_corr['r'], num, std = aperture_correction(\n",
     "    magnitudes['r'][4], magnitudes['r'][5], \n",
     "    stellarities['r'],\n",
-    "    mag_min=17.0, mag_max=18.5)\n",
+    "    mag_min=15.0, mag_max=17.0)\n",
     "print(\"Aperture correction for r band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['r']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
@@ -449,7 +449,7 @@
    "source": [
     "# Aperture correction\n",
     "mag_corr['z'], num, std = aperture_correction(\n",
-    "    magnitudes['z'][4], magnitudes['z'][5], \n",
+    "    magnitudes['z'][4], magnitudes['z'][4], \n",
     "    stellarities['z'],\n",
     "    mag_min=16.0, mag_max=17.5)\n",
     "print(\"Aperture correction for z band:\")\n",
