--- a/dmu1/dmu1_ml_XMM-13hr/1.1_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_XMM-13hr/1.1_LegacySurvey.ipynb
@@ -169,8 +169,8 @@
     "    magnitudes[band], magnitude_errors[band] = flux_to_mag_vect(flux[band] * 3.631e-6 ,flux_errors[band] * 3.631e-6)\n",
     "    \n",
     "    stellarities[band] = np.full(len(orig_legacy),0., dtype='float32')\n",
-    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF\" ] = 1.\n",
-    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF \" ] = 1.\n",
+    "    stellarities[band][orig_legacy[\"type\"] == \"PSF\" ] = 1.\n",
+    "    stellarities[band][orig_legacy[\"type\"] == \"PSF \" ] = 1.\n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use aperture 5 as target."
+    "We will use aperture 4 as target (no correction)."
    ]
   },
   {
@@ -235,7 +235,7 @@
    ],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['g'][4], \n",
-    "                     magnitudes['g'][5], \n",
+    "                     magnitudes['g'][4], \n",
     "                     stellarities['g'])"
    ]
   },
@@ -265,7 +265,7 @@
    "source": [
     "# Aperture correction\n",
     "mag_corr['g'], num, std = aperture_correction(\n",
-    "    magnitudes['g'][4], magnitudes['g'][5], \n",
+    "    magnitudes['g'][4], magnitudes['g'][4], \n",
     "    stellarities['g'],\n",
     "    mag_min=17.0, mag_max=18.5)\n",
     "print(\"Aperture correction for g band:\")\n",
@@ -334,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use magnitudes between 15.5 and 18.5."
+    "We use magnitudes between 15.5 and 17.0."
    ]
   },
   {
@@ -358,7 +358,7 @@
     "mag_corr['r'], num, std = aperture_correction(\n",
     "    magnitudes['r'][4], magnitudes['r'][5], \n",
     "    stellarities['r'],\n",
-    "    mag_min=15.5, mag_max=18.5)\n",
+    "    mag_min=15.5, mag_max=17.0)\n",
     "print(\"Aperture correction for r band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['r']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use aperture 5 as target."
+    "We will use aperture 4 as target (no correction)."
    ]
   },
   {
@@ -417,7 +417,7 @@
    ],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['z'][4], \n",
-    "                     magnitudes['z'][5], \n",
+    "                     magnitudes['z'][4], \n",
     "                     stellarities['z'])"
    ]
   },
@@ -447,7 +447,7 @@
    "source": [
     "# Aperture correction\n",
     "mag_corr['z'], num, std = aperture_correction(\n",
-    "    magnitudes['z'][4], magnitudes['z'][5], \n",
+    "    magnitudes['z'][4], magnitudes['z'][4], \n",
     "    stellarities['z'],\n",
     "    mag_min=16.2, mag_max=17.5)\n",
     "print(\"Aperture correction for z band:\")\n",
