--- a/dmu1/dmu1_ml_SA13/1.1_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_SA13/1.1_LegacySurvey.ipynb
@@ -36,7 +36,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -165,8 +167,8 @@
     "    magnitudes[band], magnitude_errors[band] = flux_to_mag_vect(flux[band] * 3.631e-6 ,flux_errors[band] * 3.631e-6)\n",
     "    \n",
     "    stellarities[band] = np.full(len(orig_legacy),0., dtype='float32')\n",
-    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF\" ] = 1.\n",
-    "    stellarities[band][np.array( orig_legacy[\"type\"]) == \"PSF \" ] = 1.\n",
+    "    stellarities[band][ orig_legacy[\"type\"] == \"PSF\" ] = 1.\n",
+    "    stellarities[band][orig_legacy[\"type\"] == \"PSF \" ] = 1.\n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
@@ -177,58 +179,6 @@
     "    \n",
     "    \n",
     "mag_corr = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(magnitudes['g'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[         nan,  27.27029708,  25.2863477 , ...,  25.63380443,\n",
-       "         25.96228241,  25.19478113],\n",
-       "       [         nan,  26.66817685,  25.13723918, ...,  24.75301796,\n",
-       "         25.0828956 ,  24.8186376 ],\n",
-       "       [         nan,  25.79887154,  25.54431579, ...,  24.37687909,\n",
-       "         24.57057394,  24.45939483],\n",
-       "       ..., \n",
-       "       [         nan,          nan,          nan, ...,  23.25061604,\n",
-       "         23.94751419,  23.56966437],\n",
-       "       [ 23.52432697,          nan,          nan, ...,  23.17470441,\n",
-       "         23.44228694,  23.45916539],\n",
-       "       [ 23.49245771,  25.86144971,          nan, ...,  22.67763172,\n",
-       "                 nan,  23.7231443 ]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "magnitudes['g']"
    ]
   },
   {
@@ -262,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use aperture 5 as target."
+    "We will use aperture 4 as target (no aperture correction)."
    ]
   },
   {
@@ -283,7 +233,7 @@
    ],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['g'][4], \n",
-    "                     magnitudes['g'][5], \n",
+    "                     magnitudes['g'][4], \n",
     "                     stellarities['g'])"
    ]
   },
@@ -313,7 +263,7 @@
    "source": [
     "# Aperture correction\n",
     "mag_corr['g'], num, std = aperture_correction(\n",
-    "    magnitudes['g'][4], magnitudes['g'][5], \n",
+    "    magnitudes['g'][4], magnitudes['g'][4], \n",
     "    stellarities['g'],\n",
     "    mag_min=17.0, mag_max=18.5)\n",
     "print(\"Aperture correction for g band:\")\n",
@@ -353,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use aperture 5 as target."
+    "We will use aperture 4 as target (no correction)."
    ]
   },
   {
@@ -374,7 +324,7 @@
    ],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['r'][4], \n",
-    "                     magnitudes['r'][5], \n",
+    "                     magnitudes['r'][4], \n",
     "                     stellarities['r'])"
    ]
   },
@@ -444,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use aperture 5 as target."
+    "We will use aperture 4 as target (no correction). "
    ]
   },
   {
@@ -495,7 +445,7 @@
    "source": [
     "# Aperture correction\n",
     "mag_corr['z'], num, std = aperture_correction(\n",
-    "    magnitudes['z'][4], magnitudes['z'][5], \n",
+    "    magnitudes['z'][4], magnitudes['z'][4], \n",
     "    stellarities['z'],\n",
     "    mag_min=16.0, mag_max=17.5)\n",
     "print(\"Aperture correction for z band:\")\n",
