Legacy Survey rerun across all fields

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -54,10 +54,10 @@
     "# Field                suffix\n",
     "['AKARI-NEP',          '20180215' ],\n",
     "['AKARI-SEP',          '20180221' ],\n",
-    "['Bootes',             '20180307' ],\n",
+    "['Bootes',             '20180501' ],\n",
     "['CDFS-SWIRE',         '20180221' ],\n",
     "['COSMOS',             '20180313' ],\n",
-    "['EGS',                '20180406' ],\n",
+    "['EGS',                '20180501' ],\n",
     "['ELAIS-N1',           '20171016' ],\n",
     "['ELAIS-N2',           '20180218' ],\n",
     "['ELAIS-S1',           '20180416' ],\n",
@@ -68,12 +68,12 @@
     "['Herschel-Stripe-82', '20180307' ],\n",
     "['Lockman-SWIRE',      '20180219' ],\n",
     "['NGP',                '20180219' ],\n",
-    "['SA13',               '20180219' ],\n",
+    "['SA13',               '20180501' ],\n",
     "['SGP',                '20180221' ],\n",
     "['SPIRE-NEP',          '20180220' ],\n",
     "['SSDF',               '20180221' ],\n",
-    "['xFLS',               '20180221' ],\n",
-    "['XMM-13hr',           '20180221' ],\n",
+    "['xFLS',               '20180501' ],\n",
+    "['XMM-13hr',           '20180501' ],\n",
     "['XMM-LSS',            '20180221' ]]"
    ]
   },
@@ -110,7 +110,7 @@
    ],
    "source": [
     "help_moc = MOC(filename='../dmu2/help_coverage_MOC.fits')\n",
-    "print('Total HELP area: {} sqare degrees'.format(round(help_moc.area_sq_deg)))"
+    "print('Total HELP area: {} sqare degrees'.format(help_moc.area_sq_deg))"
    ]
   },
   {
