remove negative and infinite vals in COSMOS

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -21,7 +19,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-04-11 12:59:43.532348\n"
+      "2018-05-02 11:08:47.405934\n"
      ]
     }
    ],
@@ -64,18 +62,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Remove infinities and negative values\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if col.startswith('f_') or col.startswith('ferr_') or col.startswith('m_') or col.startswith('merr_'):\n",
+    "        mask = np.isinf(master_catalogue[col]) | (master_catalogue[col] < 0)\n",
+    "        #print(\"Problems in {}: {}\".format(col,np.sum(mask)))\n",
+    "        master_catalogue[col][mask] = np.nan\n",
+    "        mask = np.isinf(master_catalogue[col]) | (master_catalogue[col] < 0)\n",
+    "        #print(\"probs after in {}: {}\".format(col,np.sum(mask))  )    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2599374"
+       "25994"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,12 +306,15 @@
    },
    "outputs": [],
    "source": [
-    "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(r_bands)\n",
     "remove_unneeded_fluxes(i_bands)\n",
     "remove_unneeded_fluxes(z_bands)\n",
-    "remove_unneeded_fluxes(y_bands)"
+    "remove_unneeded_fluxes(y_bands)\n",
+    "remove_unneeded_fluxes(j_bands)\n",
+    "remove_unneeded_fluxes(h_bands)\n",
+    "remove_unneeded_fluxes(ks_bands)"
    ]
   },
   {
@@ -427,12 +451,15 @@
    },
    "outputs": [],
    "source": [
-    "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(r_bands)\n",
     "remove_unneeded_fluxes(i_bands)\n",
     "remove_unneeded_fluxes(z_bands)\n",
-    "remove_unneeded_fluxes(y_bands)"
+    "remove_unneeded_fluxes(y_bands)\n",
+    "remove_unneeded_fluxes(j_bands)\n",
+    "remove_unneeded_fluxes(h_bands)\n",
+    "remove_unneeded_fluxes(ks_bands)"
    ]
   },
   {
