add vista y to removals on COSMOS

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
@@ -285,7 +285,7 @@
     "r_bands = [\"megacam_r\", \"suprime_r\", \"omegacam_r\", \"decam_r\", \"gpc1_r\"]\n",
     "i_bands = [\"megacam_i\", \"suprime_i\", \"omegacam_i\",            \"gpc1_i\"]\n",
     "z_bands = [\"megacam_z\", \"suprime_z\",               \"decam_z\", \"gpc1_z\"]\n",
-    "y_bands = [             \"suprime_y\",                          \"gpc1_y\", \"ukidss_y\"]\n",
+    "y_bands = [             \"suprime_y\",                          \"gpc1_y\", \"vista_y\", \"ukidss_y\"]\n",
     "j_bands = [\"vista_j\", \"wircam_j\",   \"ukidss_j\"  ]\n",
     "h_bands = [\"vista_h\",  \"wircam_h\",  \"ukidss_h\"  ]\n",
     "ks_bands = [\"vista_ks\", \"wircam_ks\" ]\n",
