--- a/dmu32/dmu32_SGP/SGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SGP/SGP_catalogue_merging.ipynb
@@ -193,13 +193,13 @@
    "source": [
     "# Photo-z\n",
     "\n",
-    "#photoz = Table.read(\"../../dmu24/dmu24_/data/\")\n",
-    "#photoz.meta = None\n",
+    "photoz = Table.read(\"../../dmu24/dmu24_SGP/data/master_catalogue_sgp_20180221_photoz_20180502_r_optimised.fits\")\n",
+    "photoz.meta = None\n",
     "\n",
-    "#photoz = photoz['help_id', 'z1_median']\n",
-    "#photoz['z1_median'].name = 'redshift'\n",
+    "photoz = photoz['help_id', 'z1_median']\n",
+    "photoz['z1_median'].name = 'redshift'\n",
     "\n",
-    "#photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -631,17 +631,22 @@
     "        ml = Table.read(tile)\n",
     "        ml.meta = None\n",
     "        \n",
-    "        #ml['zspec'].name = 'redshift'\n",
+    "\n",
+    "        \n",
     "\n",
     "        ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values\n",
     "        \n",
+    "        #merge in the photo-zs\n",
+    "        merged_table = join(ml, photoz, join_type='left')\n",
+    "        merged_table['redshift'].fill_value = np.nan\n",
+    "        merged_table = merged_table.filled()\n",
     "        \n",
     "        #ADD in XID+ merging here\n",
     "        #merged_table = help_merge(ml, xid_mips24)\n",
     "        #merged_table = help_merge(ml, xid_pacs)\n",
     "        #merged_table = help_merge(ml, xid_spire)\n",
     "        \n",
-    "        merged_table = ml\n",
+    "        \n",
     "    \n",
     "        # Sorting the columns\n",
     "        bands = [col[2:] for col in merged_table.colnames\n",
@@ -851,7 +856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
