More fixes to SGP cigale input

--- a/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
@@ -205,6 +205,7 @@
    "outputs": [],
    "source": [
     "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")\n",
+    "n_zphot = 0\n",
     "for tile in file_list:\n",
     "        \n",
     "    file_num = tile.split('_')[4].split('.')[0]\n",
@@ -216,6 +217,7 @@
     "\n",
     "\n",
     "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
+    "    n_zphot += len(best_catalogue)\n",
     "    \n",
     "\n",
     "    print(\"Number of sources with z-spec in file {}: {}\".format(file_num, len(best_catalogue)))\n",
@@ -235,7 +237,9 @@
     "    remove_unneeded_fluxes(y_bands)\n",
     "\n",
     "\n",
-    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_optnir_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_optnir_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)\n",
+    "    \n",
+    "print(\"Number of zphot optnir objects: {}\".format(n_zphot))"
    ]
   },
   {
@@ -571,6 +575,7 @@
     }
    ],
    "source": [
+    "n_zspec = 0\n",
     "for tile in file_list:\n",
     "        \n",
     "    file_num = tile.split('_')[4].split('.')[0]\n",
@@ -582,7 +587,9 @@
     "\n",
     "\n",
     "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"zspec\"])]\n",
+    "    best_catalogue.remove_column('redshift')\n",
     "    best_catalogue[\"zspec\"].name = \"redshift\"\n",
+    "    n_zspec += len(best_catalogue)\n",
     "\n",
     "    print(\"Number of sources with z-spec in file {}: {}\".format(file_num, len(best_catalogue)))\n",
     "\n",
@@ -601,7 +608,10 @@
     "    remove_unneeded_fluxes(y_bands)\n",
     "\n",
     "\n",
-    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_optnir_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_optnir_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), \n",
+    "                         overwrite=True)\n",
+    "    \n",
+    "print(\"Number of zspec optnir objects: {}\".format(n_zspec))"
    ]
   }
  ],
