Add HS82 loop changes to xmm-lss to avoid memory issues

--- a/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -363,7 +365,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -407,7 +411,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -447,7 +453,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -540,7 +548,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -580,7 +590,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -1521,6 +1533,14 @@
     "    \n",
     "    \n",
     "    sub_catalogue.write(\"{}/tiles/sub_catalogue_xmm-lss{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
+    "    \n",
+    "    \n",
+    "    del sub_catalogue\n",
+    "    del flag_column\n",
+    "    del flag_merged_column\n",
+    "    gc.collect()\n",
+    "    time.sleep(10)\n",
+    "    \n",
     "    n += 1"
    ]
   },
@@ -1565,7 +1585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
