Testing flag code on AKARI-NEP

--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -261,7 +261,10 @@
    },
    "outputs": [],
    "source": [
-    "new_catname = catname[:-5] + \"_withFlags.fits\"\n",
+    "flag_cols = [\"help_id\"]\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if col.startswith(\"flag_\")\n",
+    "new_catname = \"./data/\" + catname[:-5] + \"_flags.fits\"\n",
     "master_catalogue.write(new_catname, overwrite = True)"
    ]
   }
