fixing AKARI-NEP flagging

--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"../../dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-nep_20180205.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-nep_20180215.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "irac_mag = 3.9000000001085695\n",
-    "bands = [\"IRAC i1\", \"IRAC i2\", \"IRAC i3\", \"IRAC i4\"]\n",
+    "bands = [\"IRAC i1\", \"IRAC i2\"]\n",
     "\n",
     "for i, band in enumerate(bands):\n",
     "    print(band)\n",
