fixing AKARI-NEP flagging

--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -223,6 +223,7 @@
     "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
     "        \n",
     "        # Aperture mag\n",
+    "        try:\n",
     "        col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
     "        ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
     "        flagcol1, flagcol2 = \"flag_{}_ap\".format(basecol1), \"flag_{}_ap\".format(basecol2)\n",
@@ -231,9 +232,10 @@
     "                      master_catalogue[ecol1], master_catalogue[ecol2],\n",
     "                      master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
     "                      labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
+    "        except KeyError:\n",
+    "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))\n",
     "                      \n",
-    "                      \n",
-    "        \n",
+    "        try:\n",
     "        # Tot mag\n",
     "        col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
     "        ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
@@ -242,7 +244,9 @@
     "        flag_outliers(master_catalogue[col1], master_catalogue[col2], \n",
     "                      master_catalogue[ecol1], master_catalogue[ecol2],\n",
     "                      master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
-    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))              \n",
+    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))\n",
+    "        except KeyError:\n",
+    "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))\n",
     "                      "
    ]
   },
