fixing AKARI-NEP flagging

--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -16,7 +16,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from astropy.table import Table"
+    "from astropy.table import Table\n",
+    "\n",
+    "import itertools"
    ]
   },
   {
