fixing AKARI-NEP flagging

--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -29,7 +29,9 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"../../dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-nep_20180215.fits\"\n",
+    "SUFFIX = \"20180215\"\n",
+    "FIELD = \"AKARI-NEP\"\n",
+    "catname = \"../../dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-nep_{}.fits\".format(SUFFIX)\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -269,9 +271,10 @@
    "source": [
     "flag_cols = [\"help_id\"]\n",
     "for col in master_catalogue.colnames:\n",
-    "    if col.startswith(\"flag_\")\n",
-    "new_catname = \"./data/\" + catname[:-5] + \"_flags.fits\"\n",
-    "master_catalogue.write(new_catname, overwrite = True)"
+    "    if col.startswith(\"flag_\"):\n",
+    "        flag_cols += [col]\n",
+    "new_catname = \"./data/{}_{}_flags.fits\".format(FIELD.lower(),SUFFIX)\n",
+    "master_catalogue[flag_cols].write(new_catname, overwrite = True)"
    ]
   }
  ],
