--- a/dmu6/dmu6_v_Bootes/4_flags_bootes.ipynb
+++ b/dmu6/dmu6_v_Bootes/4_flags_bootes.ipynb
@@ -16,7 +16,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from astropy.table import Table"
+    "from astropy.table import Table\n",
+    "\n",
+    "import itertools"
    ]
   },
   {
