running all flags

--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -250,7 +250,7 @@
     "                          master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
     "                          labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))\n",
     "        except KeyError:\n",
-    "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))\n",
+    "            print(\"Probably no total mag on {} or {}\".format(col1, col2))\n",
     "                      "
    ]
   },
