--- a/dmu6/dmu6_v_AKARI-SEP/4_flags_akari-sep.ipynb
+++ b/dmu6/dmu6_v_AKARI-SEP/4_flags_akari-sep.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SPIRE-NEP master catalogue: Flags"
+    "# AKARI-NEP master catalogue: Flags"
    ]
   },
   {
@@ -29,9 +29,9 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = \"20180220\"\n",
-    "FIELD = \"SPIRE-NEP\"\n",
-    "catname = \"../../dmu1/dmu1_ml_SPIRE-NEP/data/master_catalogue_spire-nep_{}.fits\".format(SUFFIX)\n",
+    "SUFFIX = \"20180221\"\n",
+    "FIELD = \"AKARI-SEP\"\n",
+    "catname = \"../../dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-sep_{}.fits\".format(SUFFIX)\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -43,7 +43,13 @@
    },
    "outputs": [],
    "source": [
-    "all_bands = []"
+    "g_bands = [ \"DECam g\"]\n",
+    "r_bands = [ \"DECam r\"]\n",
+    "i_bands = [ \"DECam i\"]\n",
+    "z_bands = [ \"DECam z\"]\n",
+    "y_bands = [ \"DECam y\"]\n",
+    "\n",
+    "all_bands = [g_bands, r_bands, i_bands, z_bands, y_bands]"
    ]
   },
   {
@@ -76,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.a Pan-STARRS Aperture and Total magnitude errors"
+    "### 2.c IRAC Aperture magnitudes"
    ]
   },
   {
@@ -87,25 +93,29 @@
    },
    "outputs": [],
    "source": [
-    "## dmu0: Pan-STARRS forced photometry catalogue\n",
-    "gpc1_err = 0.0010860000038519502\n",
-    "bands = [\"GPC1 g\", \"GPC1 r\", \"GPC1 i\", \"GPC1 z\", \"GPC1 y\"]\n",
+    "irac_mag = 3.9000000001085695\n",
+    "bands = [\"IRAC i1\", \"IRAC i2\"]\n",
     "\n",
     "for i, band in enumerate(bands):\n",
     "    print(band)\n",
     "    basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
-    "    ecol_ap, ecol_tot = \"merr_ap_{}\".format(basecol), \"merr_{}\".format(basecol)\n",
-    "    flagcol_ap, flagcol_tot = \"flag_{}_ap\".format(basecol), \"flag_{}\".format(basecol)\n",
+    "    ecol_ap = \"merr_ap_{}\".format(basecol)\n",
+    "    flagcol_ap = \"flag_{}_ap\".format(basecol)\n",
     "    \n",
-    "    mask_ap  = np.where(master_catalogue[ecol_ap]  == gpc1_err)[0]\n",
-    "    mask_tot = np.where(master_catalogue[ecol_tot] == gpc1_err)[0]\n",
+    "    mask_ap  = np.where(master_catalogue[ecol_ap]  == irac_mag)[0]\n",
     "    \n",
     "    print('  Aperture magnitude')\n",
-    "    flag_mag(flagcol_ap, mask_ap)\n",
-    "    print('  Total magnitude')\n",
-    "    flag_mag(flagcol_tot, mask_tot)\n",
-    "    "
+    "    flag_mag(flagcol_ap, mask_ap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Outliers\n",
+    "\n",
+    "There are no duplicate bands so we cannot flag outliers using the standard method."
    ]
   },
   {
