--- a/dmu6/dmu6_v_HDF-N/4_flags_hdf-n.ipynb
+++ b/dmu6/dmu6_v_HDF-N/4_flags_hdf-n.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from astropy.table import Table"
+    "from astropy.table import Table\n",
+    "import itertools"
    ]
   },
   {
@@ -27,7 +28,9 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"../../dmu1/dmu1_ml_HDF-N/data/master_catalogue_hdf-n_20180219.fits\"\n",
+    "SUFFIX = \"20180427\"\n",
+    "FIELD = \"HDF-N\"\n",
+    "catname = \"../../dmu1/dmu1_ml_HDF-N/data/master_catalogue_hdf-n_{}.fits\".format(SUFFIX)\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -192,26 +195,30 @@
     "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
     "        \n",
     "        # Aperture mag\n",
-    "        col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
-    "        ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
-    "        flagcol1, flagcol2 = \"flag_{}_ap\".format(basecol1), \"flag_{}_ap\".format(basecol2)\n",
+    "        try:\n",
+    "            col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
+    "            ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
+    "            flagcol1, flagcol2 = \"flag_{}_ap\".format(basecol1), \"flag_{}_ap\".format(basecol2)\n",
     "        \n",
-    "        flag_outliers(master_catalogue[col1], master_catalogue[col2],\n",
-    "                      master_catalogue[ecol1], master_catalogue[ecol2],\n",
-    "                      master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
-    "                      labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
+    "            flag_outliers(master_catalogue[col1], master_catalogue[col2],\n",
+    "                          master_catalogue[ecol1], master_catalogue[ecol2],\n",
+    "                          master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
+    "                          labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
+    "        except KeyError:\n",
+    "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))\n",
     "                      \n",
+    "        try:\n",
+    "            # Tot mag\n",
+    "            col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
+    "            ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
+    "            flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
     "                      \n",
-    "        \n",
-    "        # Tot mag\n",
-    "        col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
-    "        ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
-    "        flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
-    "                      \n",
-    "        flag_outliers(master_catalogue[col1], master_catalogue[col2], \n",
-    "                      master_catalogue[ecol1], master_catalogue[ecol2],\n",
-    "                      master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
-    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))              \n",
+    "            flag_outliers(master_catalogue[col1], master_catalogue[col2], \n",
+    "                          master_catalogue[ecol1], master_catalogue[ecol2],\n",
+    "                          master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
+    "                          labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))\n",
+    "        except KeyError:\n",
+    "            print(\"Probably no total mag on {} or {}\".format(col1, col2))            \n",
     "                      "
    ]
   },
@@ -230,8 +237,12 @@
    },
    "outputs": [],
    "source": [
-    "new_catname = catname[:-5] + \"_withFlags.fits\"\n",
-    "master_catalogue.write(new_catname, overwrite = True)"
+    "flag_cols = [\"help_id\"]\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if col.startswith(\"flag_\"):\n",
+    "        flag_cols += [col]\n",
+    "new_catname = \"./data/{}_{}_flags.fits\".format(FIELD.lower(),SUFFIX)\n",
+    "master_catalogue[flag_cols].write(new_catname, overwrite = True)"
    ]
   }
  ],
