--- a/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
+++ b/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from astropy.table import Table\n",
+    "from astropy.table import Table, Column\n",
     "\n",
     "import itertools"
    ]
@@ -43,10 +43,10 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [\"Megacam u\",                      \"KIDS u\"]\n",
-    "g_bands = [\"Megacam g\", \"DECam g\", \"GPC1 g\", \"KIDS g\", \"SUPRIME g\"]\n",
-    "r_bands = [\"Megacam r\", \"DECam r\", \"GPC1 r\", \"KIDS r\", \"SUPRIME r\"]\n",
-    "i_bands = [\"Megacam i\",            \"GPC1 i\", \"KIDS i\", \"SUPRIME i\"]\n",
+    "u_bands = [\"Megacam u\",                      \"Omegacam u\"]\n",
+    "g_bands = [\"Megacam g\", \"DECam g\", \"GPC1 g\", \"Omegacam g\", \"SUPRIME g\"]\n",
+    "r_bands = [\"Megacam r\", \"DECam r\", \"GPC1 r\", \"Omegacam r\", \"SUPRIME r\"]\n",
+    "i_bands = [\"Megacam i\",            \"GPC1 i\", \"Omegacam i\", \"SUPRIME i\"]\n",
     "z_bands = [\"Megacam z\", \"DECam z\", \"GPC1 z\",           \"SUPRIME z\"]\n",
     "y_bands = [                        \"GPC1 y\",           \"SUPRIME y\", \"UKIDSS Y\"]\n",
     "J_bands = [                                                         \"UKIDSS J\", \"WIRCAM J\"]\n",
@@ -75,7 +75,7 @@
     "    \n",
     "    # Add flag columns if does not exist\n",
     "    if flagcol not in master_catalogue.colnames:\n",
-    "        master_catalogue[flagcol] = np.zeros(len(master_catalogue), dtype=bool)\n",
+    "        master_catalogue.add_column(Column(data=np.zeros(len(master_catalogue), dtype=bool), name=flagcol))\n",
     "    \n",
     "    # Flagged\n",
     "    master_catalogue[flagcol][mask] = np.ones(len(mask), dtype=bool)\n",
