--- a/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
+++ b/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
@@ -168,9 +168,11 @@
     "    \n",
     "    # Add flag columns if does not exist\n",
     "    if flagcol_x not in master_catalogue.colnames:\n",
-    "        master_catalogue[flagcol_x] = np.zeros(len(master_catalogue), dtype=bool)\n",
+    "        master_catalogue.add_column(Column(data=np.zeros(len(master_catalogue), dtype=bool), name=flagcol_x))\n",
+    "\n",
     "    if flagcol_y not in master_catalogue.colnames:\n",
-    "        master_catalogue[flagcol_y] = np.zeros(len(master_catalogue), dtype=bool)\n",
+    "\n",
+    "        master_catalogue.add_column(Column(data=np.zeros(len(master_catalogue), dtype=bool), name=flagcol_y))\n",
     "    flagx, flagy = master_catalogue[flagcol_x], master_catalogue[flagcol_y]\n",
     "        \n",
     "    ## Find outliers  \n",
