--- a/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
+++ b/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
@@ -241,7 +241,7 @@
     "        \n",
     "            flag_outliers(master_catalogue[col1], master_catalogue[col2],\n",
     "                          master_catalogue[ecol1], master_catalogue[ecol2],\n",
-    "                          master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
+    "                          flagcol1, flagcol2,\n",
     "                          labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
     "        except KeyError:\n",
     "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))\n",
@@ -254,7 +254,7 @@
     "                      \n",
     "            flag_outliers(master_catalogue[col1], master_catalogue[col2], \n",
     "                          master_catalogue[ecol1], master_catalogue[ecol2],\n",
-    "                          master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
+    "                          flagcol1, flagcol2,\n",
     "                          labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))\n",
     "        except KeyError:\n",
     "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))"
